
<resources>

    <string name="app_name">Quiz App</string>
    <string name="quest_name">ANSWER THESE QUESTIONS!!!</string>
    <string name="hydro">Hydrometer </string>
    <string name="thermo">Thermometer</string>
    <string name="quest_one">1. An instrument to connect to measure temperature ? </string>
    <string name="ans_one">Gyrometer</string>
    <string name="quest_two">2. What is known as the ship of the desert?</string>
    <string name="cam">Camel</string>
    <string name="ans_two">Tiger</string>
    <string name="ans_three">Dog</string>
    <string name="quest_three">3. The blanket of air that envelops the earth is called?</string>
    <string name="ans_four">Hydrosphere</string>
    <string name="ans_five">Atmosphere</string>
    <string name="ans_six">Upper Crust</string>
    <string name="quest_four">5. The Kalahari Desert is in what country ?</string>
    <string name="ind">India</string>
    <string name="bot">Botswana</string>
    <string name="chil">Chile</string>
    <string name="quest_five">6. The process by which green plants manufacture their food?</string>
    <string name="dig">Digestion</string>
    <string name="photo">Photosynthesis</string>
    <string name="excrete">Excretion</string>
    <string name="dog">Dog </string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="submit">Submit</string>
    <string name="submit_one">Submit</string>
    <string name="quest_and">4. Does the sun go around the earth,or the earth around the sun?</string>
    <string name="write">7. Electrons are smaller than atoms. </string>
    <string name="reset">RESET</string>
    <string name="name_please">YOUR NAME PLEASE</string>

</resources>
