<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quizz_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/quizza" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/quest_name"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />
        </RelativeLayout>


        <TextView
            android:id="@+id/quest1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:text="@string/quest_one"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <CheckBox
                android:id="@+id/gyro_checkbox"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ans_one"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/hydro_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hydro"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/thermo_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/thermo"
                android:textSize="14sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:onClick="submitOrderOne"
                android:text="@string/submit"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="@string/quest_two"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <CheckBox
                android:id="@+id/camel_checkbox"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/cam"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tiger_checkbox"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/ans_two"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/dog_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/dog"
                android:textSize="14sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:onClick="submitOrderTwo"
                android:text="@string/submit_one" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/quest_three"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <CheckBox
                android:id="@+id/hydrosphere_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/ans_four" />

            <CheckBox
                android:id="@+id/atom_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/ans_five" />

            <CheckBox
                android:id="@+id/upper_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/ans_six" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"

                android:layout_marginRight="10dp"
                android:onClick="submitOrderThree"
                android:text="submit" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/quest_and"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/answer_quest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:hint="type the answer here "
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/quest_four"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <CheckBox
                android:id="@+id/india_checkbox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/ind" />

            <CheckBox
                android:id="@+id/botswana_checkbox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/bot" />

            <CheckBox
                android:id="@+id/chile_checkbox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/chil" />
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:onClick="submitOrderFour"
            android:text="submit" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/quest_five"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <CheckBox
                android:id="@+id/dig_checkBox"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dig" />

            <CheckBox
                android:id="@+id/photo_checkbox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/photo" />

            <CheckBox
                android:id="@+id/excrete_checkBox"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/excrete" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:onClick="submitOrderFive"
                android:text="submit" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:text="@string/write" />

        <RadioGroup
            android:id="@+id/radioCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_yes" />

            <RadioButton
                android:id="@+id/radioNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_no" />


        </RadioGroup>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:hint="@string/name_please"
            android:inputType="textMultiLine" />




            <Button
                android:id="@+id/buttonShowPoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#E0E0E0"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="7dp"
                android:onClick="submitOrder"
                android:text="SHOW RESULT"
                android:textColor="#3E2723"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reset"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:onClick="reset"
                android:background="#E0E0E0"
                android:textColor="#3E2723"
                android:text="RESET"
                android:textStyle="bold" />


    </LinearLayout>
</ScrollView>